syntax = "proto3";

option go_package = "github.com/Pavan-pandya1/Microservices/common/orders";
package orders;

// The order service
service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrders (GetOrderRequest) returns (GetOrderResponse);
}

// Message representing an order
message Order {
    int32 OrderID = 1;
    int32 CustomerID = 2;
    int32 ProductID = 3;
    int32 Quantity= 4;
    //string status = 5;
}

// Message to create a new order //type of enum
message CreateOrderRequest {
  int32 ProductID = 1;
  int32  CustomerID = 2;
  int32 Quantity = 3;
}

// Message to return after creating an order
message CreateOrderResponse {
  //string order_id = 1;
  string status = 1;
}

// Message to request an order by ID
message GetOrderRequest {
  int32 CustomerID = 1;
}

message GetOrderResponse {
    repeated Order orders = 1;
}
  

